# SAE_C_OCTO_VERSO

./: .gitignore  CMakeLists.txt  Jeu.c  Jeu.h  Lettre.c  Lettre.h  Pile.c  Pile.h  README.md  chevalet.c  chevalet.h  dictionnaire.c  dictionnaire.h  joueur.c  joueur.h  main.c  pioche.c  pioche.h  rail.c  rail.h  test_out.txt  tests_auto.bat
